# urbandevlopment

./: README.md  components.json  next.config.js  package-lock.json  package.json  sustainability_data.csv  sustainability_report.md  vercel.json
.devcontainer/: devcontainer.json
app/: actions.ts  client-header.tsx  globals.css  layout.tsx  page.tsx
app/auth/: layout.tsx
app/auth/forgot-password/: page.tsx
app/auth/login/: page.tsx
app/auth/signup/: page.tsx
app/contexts/: SidebarContext.tsx  UserContext.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/background-developments/: page.tsx
app/dashboard/predict/: page.tsx
app/dashboard/profile/: page.tsx
backend/: dashboard_metrics.py  main.py  pyproject.toml  requirements.txt  sustainability_data.csv
backend/ml/newpredection/: dataset.py  main.ipynb  prediction.py  traffic_data.csv  traffic_prediction_model.pkl  train.py
backend/ml/sustainablitycheck/: check.py  create_sustainability_dataset.py  ml.ipynb  sustainability_data.csv  train_sustainability_model.py
backend/ml/trafficanalysis/: create_traffic_dataset.py  model.ipynb  scaler.pkl  traffic_congestion_model.pkl  traffic_data.csv  trafficanalysis.py  train_traffic_model.py
backend/ml/urban_analysis/: analysis.ipynb  create_urban_dataset.py  layout.py  train_urban_model.py  urban_data.csv
components/: UserContext.tsx  chart.tsx  congestion-map.tsx  map.tsx  navigation.tsx  overview.tsx  recent-activity.tsx  theme-provider.tsx  theme-toggle.tsx
components/ui/: alert-dialog.tsx  dialog.tsx
docs/: backend.md  frontend.md
(+6 files in other folders)
