[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urbandev-backend"
version = "0.1.0"
dependencies = [
    "fastapi>=0.95.2",
    "uvicorn>=0.22.0",
    "pydantic>=1.10.7",
    "scikit-learn==1.5.0",
    "numpy==1.21.6",
    "joblib==1.1.0",
    "python-multipart==0.0.18"
]
