[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel>=0.41.0",
    "Cython>=3.0.0",
    "numpy>=1.26.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "urbandev-backend"
version = "0.1.0"
dependencies = [
    "fastapi==0.95.2",
    "uvicorn==0.22.0",
    "pydantic==1.10.13",
    "numpy==1.26.4",
    "scikit-learn==1.4.0",
    "joblib==1.3.2",
    "python-multipart==0.0.6"
]
